--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     <title>Rosie</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="row">
+        <a href="index.html" class="col-md-4 logo"></a>
+        <div class="col-md-8"></div>
+      </div>
+    </header>
     <section></section>
     <footer></footer>
   </body>
