--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
+    <!-- Hover.css -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+      type="text/css"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Rosie</title>
   </head>
@@ -30,7 +36,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
                 >
-                  <a href="#"
+                  <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-home" aria-hidden="true"></i
                     ><span>Home</span></a
                   >
@@ -38,7 +44,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
                 >
-                  <a href="#"
+                  <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-graduation-cap" aria-hidden="true"></i
                     ><span>Resume</span></a
                   >
@@ -46,7 +52,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
-                  <a href="#"
+                  <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-comment-o" aria-hidden="true"></i
                     ><span>Contact</span></a
                   >
@@ -54,7 +60,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
                 >
-                  <a href="#"
+                  <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-download" aria-hidden="true"></i
                     ><span>Download</span></a
                   >
