--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      type="text/css"
     />
-    <!-- Hover.css -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      type="text/css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
@@ -22,7 +25,7 @@
   <body>
     <header>
       <div class="row no-gutters">
-        <a href="index.html" class="col-md-4 logo"></a>
+        <a class="col-md-4 logo" href="02-index.html"></a>
         <div class="col-md-8">
           <div class="row no-gutters bg-color-name-title">
             <div class="col heading">
@@ -34,7 +37,7 @@
             <div class="col">
               <ul id="nav" class="list-inline menucontainer">
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem"
                 >
                   <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-home" aria-hidden="true"></i
@@ -42,7 +45,7 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem"
                 >
                   <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-graduation-cap" aria-hidden="true"></i
@@ -50,7 +53,7 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem"
                 >
                   <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-comment-o" aria-hidden="true"></i
@@ -58,11 +61,11 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem"
                 >
                   <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-download" aria-hidden="true"></i
-                    ><span>Download</span></a
+                    ><span>Download CV</span></a
                   >
                 </li>
               </ul>
@@ -85,7 +88,7 @@
           <h5 class="uppercase general-sub">Download</h5>
           <p class="inline-block">
             Need a printable version of my CV? Download it here.
-            <a href="#" class="cv-pdf" target="_blank">
+            <a href="#" target="_blank" class="cv-pdf">
               <i class="fa fa-download" aria-hidden="true"></i>
               <span class="sr-only">Download link.</span>
             </a>
@@ -134,10 +137,5 @@
         </div>
       </div>
     </footer>
-    <!-- Font awesome -->
-    <script
-      src="https://kit.fontawesome.com/f78bdc0f1e.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
