--- a/index.html
+++ b/index.html
@@ -6,23 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      type="text/css"
     />
-    <!-- Hover.css -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      type="text/css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
       type="text/css"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Rosie</title>
+    <title>Document</title>
   </head>
   <body>
     <header>
       <div class="row no-gutters">
-        <a href="index.html" class="col-md-4 logo"></a>
+        <a class="col-md-4 logo" href="02-index.html"></a>
         <div class="col-md-8">
           <div class="row no-gutters bg-color-name-title">
             <div class="col heading">
@@ -34,7 +37,7 @@
             <div class="col">
               <ul id="nav" class="list-inline menucontainer">
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem"
                 >
                   <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-home" aria-hidden="true"></i
@@ -42,7 +45,7 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem"
                 >
                   <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-graduation-cap" aria-hidden="true"></i
@@ -50,7 +53,7 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem"
                 >
                   <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-comment-o" aria-hidden="true"></i
@@ -58,11 +61,11 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem"
                 >
                   <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-download" aria-hidden="true"></i
-                    ><span>Download</span></a
+                    ><span>Download CV</span></a
                   >
                 </li>
               </ul>
@@ -72,11 +75,109 @@
       </div>
     </header>
     <section class="container-fluid">
-      <div class="row row-table">
+      <div class="row">
+        <div class="col-md-4 bg-color-personal-info section-column">
+          <div class="row">
+            <div class="col-12">
+              <h3 class="section-heading uppercase">Personal Info</h3>
+            </div>
+          </div>
+          <div class="personal-info-item">
+            <div class="key">
+              <p class="uppercase">Name:</p>
+            </div>
+            <div class="value">
+              <p>Rosie Odenkirk</p>
+            </div>
+          </div>
+          <div class="personal-info-item">
+            <div class="key">
+              <p class="uppercase">Address:</p>
+            </div>
+            <div class="value">
+              <p>17 Riverdale, Catskills, NY USA</p>
+            </div>
+          </div>
+          <div class="personal-info-item">
+            <div class="key">
+              <p class="uppercase">Phone:</p>
+            </div>
+            <div class="value">
+              <p>555 204 1973</p>
+            </div>
+          </div>
+          <div class="personal-info-item">
+            <div class="key">
+              <p class="uppercase">Email:</p>
+            </div>
+            <div class="value">
+              <p>rosie.odenkirk@hansaw.com</p>
+            </div>
+          </div>
+        </div>
         <div class="col-md-8 bg-color-three-reasons section-column">
           <div class="row">
             <div class="col">
               <h3 class="section-heading uppercase">About Me</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+              <div class="row">
+                <div class="col-2">
+                  <i
+                    class="three-reasons-icon fa fa-question"
+                    aria-hidden="true"
+                  ></i>
+                </div>
+                <div class="col-10">
+                  <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                  <p>
+                    I'm a skilled Full Stack Developer with a wealth of diverse
+                    life and technical experience that I bring to every project.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+              <div class="row">
+                <div class="col-2">
+                  <i
+                    class="three-reasons-icon fa fa-thumbs-up"
+                    aria-hidden="true"
+                  ></i>
+                </div>
+                <div class="col-10">
+                  <h4 class="three-reasons-heading uppercase">
+                    How do I do it?
+                  </h4>
+                  <p>
+                    I follow form as well as function. I know that the
+                    aesthetics of effective design combined with application
+                    speed, security and reliability combine to create a great
+                    user experience.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+              <div class="row">
+                <div class="col-2">
+                  <i
+                    class="three-reasons-icon fa fa-bolt"
+                    aria-hidden="true"
+                  ></i>
+                </div>
+                <div class="col-10">
+                  <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                  <p>
+                    I work quickly and effectively in getting things built and
+                    working across the stack. I'm an excellent communicator who
+                    thrives in bright and enthusiastic teams and I'm also a self
+                    starter when working solo.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -95,7 +196,7 @@
           <h5 class="uppercase general-sub">Download</h5>
           <p class="inline-block">
             Need a printable version of my CV? Download it here.
-            <a href="#" class="cv-pdf" target="_blank">
+            <a href="#" target="_blank" class="cv-pdf">
               <i class="fa fa-download" aria-hidden="true"></i>
               <span class="sr-only">Download link.</span>
             </a>
@@ -144,10 +245,5 @@
         </div>
       </div>
     </footer>
-    <!-- Font awesome -->
-    <script
-      src="https://kit.fontawesome.com/f78bdc0f1e.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
