--- a/resume.html
+++ b/resume.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      type="text/css"
     />
-    <!-- Hover.css -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      type="text/css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
@@ -22,7 +25,7 @@
   <body>
     <header>
       <div class="row no-gutters">
-        <a href="index.html" class="col-md-4 logo"></a>
+        <a class="col-md-4 logo" href="02-index.html"></a>
         <div class="col-md-8">
           <div class="row no-gutters bg-color-name-title">
             <div class="col heading">
@@ -34,7 +37,7 @@
             <div class="col">
               <ul id="nav" class="list-inline menucontainer">
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem"
                 >
                   <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-home" aria-hidden="true"></i
@@ -42,7 +45,7 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem"
                 >
                   <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-graduation-cap" aria-hidden="true"></i
@@ -50,7 +53,7 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem"
                 >
                   <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-comment-o" aria-hidden="true"></i
@@ -58,11 +61,11 @@
                   >
                 </li>
                 <li
-                  class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
+                  class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem"
                 >
                   <a href="#" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-download" aria-hidden="true"></i
-                    ><span>Download</span></a
+                    ><span>Download CV</span></a
                   >
                 </li>
               </ul>
@@ -71,7 +74,59 @@
         </div>
       </div>
     </header>
-    <section></section>
+    <section class="container-fluid">
+      <div class="row">
+        <div class="col-md-4 bg-color-personal-info section-column">
+          <div class="row">
+            <div class="col-12">
+              <h3 class="section-heading uppercase">Work History</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-8 bg-color-three-reasons section-column">
+          <div class="row">
+            <div class="col">
+              <h3 class="section-heading uppercase">My Skills</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+              <div class="row">
+                <div class="col-2">
+                  <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
+                </div>
+                <div class="col-10">
+                  <h4 class="three-reasons-heading uppercase">Front End</h4>
+                  <p>
+                    I'm a skilled Full Stack Developer with a wealth of diverse
+                    life and technical experience that I bring to every project.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+              <div class="row">
+                <div class="col-2">
+                  <i
+                    class="three-reasons-icon fa fa-gears"
+                    aria-hidden="true"
+                  ></i>
+                </div>
+                <div class="col-10">
+                  <h4 class="three-reasons-heading uppercase">Back End</h4>
+                  <p>
+                    I follow form as well as function. I know that the
+                    aesthetics of effective design combined with application
+                    speed, security and reliability combine to create a great
+                    user experience.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="container-fluid">
       <div id="footer-details" class="row">
         <div class="col-sm-4">
@@ -85,7 +140,7 @@
           <h5 class="uppercase general-sub">Download</h5>
           <p class="inline-block">
             Need a printable version of my CV? Download it here.
-            <a href="#" class="cv-pdf" target="_blank">
+            <a href="#" target="_blank" class="cv-pdf">
               <i class="fa fa-download" aria-hidden="true"></i>
               <span class="sr-only">Download link.</span>
             </a>
@@ -134,10 +189,5 @@
         </div>
       </div>
     </footer>
-    <!-- Font awesome -->
-    <script
-      src="https://kit.fontawesome.com/f78bdc0f1e.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
