--- a/interests.html
+++ b/interests.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Rosie Odenkirk</title>
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
       type="text/css"
     />
     <link
@@ -20,13 +19,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
       type="text/css"
     />
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Rosie</title>
   </head>
-
   <body>
     <header>
       <div class="row no-gutters">
-        <a href="index.html" class="col-md-4 logo"> </a>
+        <a class="col-md-4 logo" href="02-index.html"></a>
         <div class="col-md-8">
           <div class="row no-gutters bg-color-name-title">
             <div class="col heading">
@@ -37,49 +36,37 @@
           <div class="row no-gutters">
             <div class="col">
               <ul id="nav" class="list-inline menucontainer row">
-                <li
-                  class="col-6 col-sm-2 ui-menu-color-home list-inline-item menuitem"
-                >
+                <li class="col-xs-6 col-sm-2 ui-menu-color-home menuitem">
                   <a href="index.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-home" aria-hidden="true"></i
                     ><span>Home</span></a
                   >
                 </li>
-                <li
-                  class="col-6 col-sm-2 ui-menu-color-resume list-inline-item menuitem"
-                >
+                <li class="col-xs-6 col-sm-2 ui-menu-color-resume menuitem">
                   <a href="resume.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-graduation-cap" aria-hidden="true"></i
                     ><span>Resume</span></a
                   >
                 </li>
-                <li
-                  class="col-6 col-sm-2 ui-menu-color-contact list-inline-item menuitem"
-                >
+                <li class="col-xs-6 col-sm-2 ui-menu-color-contact menuitem">
                   <a href="contact.html" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-comment-o" aria-hidden="true"></i
+                    ><i class="fa fa-commenting-o" aria-hidden="true"></i
                     ><span>Contact</span></a
                   >
                 </li>
-                <li
-                  class="col-6 col-sm-2 ui-menu-color-interests list-inline-item menuitem"
-                >
+                <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem">
                   <a href="interests.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-users" aria-hidden="true"></i
                     ><span>Interests</span></a
                   >
                 </li>
-                <li
-                  class="col-6 col-sm-2 ui-menu-color-github list-inline-item menuitem"
-                >
+                <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
                   <a href="github.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-github" aria-hidden="true"></i
                     ><span>GitHub</span></a
                   >
                 </li>
-                <li
-                  class="col-6 col-sm-2 ui-menu-color-download list-inline-item menuitem"
-                >
+                <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
                   <a
                     href="assets/cv/sample-cv.pdf"
                     target="_blank"
