--- a/interests.html
+++ b/interests.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Rosie Odenkirk</title>
+
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
       type="text/css"
     />
     <link
@@ -19,13 +20,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
       type="text/css"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Rosie</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
   </head>
+
   <body>
     <header>
       <div class="row no-gutters">
-        <a class="col-md-4 logo" href="02-index.html"></a>
+        <a href="index.html" class="col-md-4 logo"> </a>
         <div class="col-md-8">
           <div class="row no-gutters bg-color-name-title">
             <div class="col heading">
@@ -36,37 +37,37 @@
           <div class="row no-gutters">
             <div class="col">
               <ul id="nav" class="list-inline menucontainer row">
-                <li class="col-xs-6 col-sm-2 ui-menu-color-home menuitem">
+                <li class="col-6 col-sm-2 ui-menu-color-home menuitem">
                   <a href="index.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-home" aria-hidden="true"></i
                     ><span>Home</span></a
                   >
                 </li>
-                <li class="col-xs-6 col-sm-2 ui-menu-color-resume menuitem">
+                <li class="col-6 col-sm-2 ui-menu-color-resume menuitem">
                   <a href="resume.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-graduation-cap" aria-hidden="true"></i
                     ><span>Resume</span></a
                   >
                 </li>
-                <li class="col-xs-6 col-sm-2 ui-menu-color-contact menuitem">
+                <li class="col-6 col-sm-2 ui-menu-color-contact menuitem">
                   <a href="contact.html" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-commenting-o" aria-hidden="true"></i
+                    ><i class="fa fa-comment-o" aria-hidden="true"></i
                     ><span>Contact</span></a
                   >
                 </li>
-                <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem">
+                <li class="col-6 col-sm-2 ui-menu-color-interests menuitem">
                   <a href="interests.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-users" aria-hidden="true"></i
                     ><span>Interests</span></a
                   >
                 </li>
-                <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
+                <li class="col-6 col-sm-2 ui-menu-color-github menuitem">
                   <a href="github.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-github" aria-hidden="true"></i
                     ><span>GitHub</span></a
                   >
                 </li>
-                <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
+                <li class="col-6 col-sm-2 ui-menu-color-download menuitem">
                   <a
                     href="assets/cv/sample-cv.pdf"
                     target="_blank"
@@ -276,17 +277,29 @@
             lng: -33.134766,
           },
         });
+        var labels = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+        var locations = [
+          { lat: 40.785091, lng: -73.968285 },
+          { lat: 41.084045, lng: -73.874245 },
+          { lat: 40.754932, lng: -73.984016 },
+        ];
+        var markers = locations.map(function (location, i) {
+          return new google.maps.Marker({
+            position: location,
+            label: labels[i % labels.length],
+          });
+        });
+        var markerClusterer = MarkerClusterer(map, markers, {
+          imagePath:
+            "https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m",
+        });
       }
     </script>
-    <!-- prettier-ignore -->
-    <!-- <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
-        ({key: "AIzaSyB6zpjeQEhRsRbS-PFgEXZktLJFsEXtBdE", v: "weekly"});</script> -->
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6zpjeQEhRsRbS-PFgEXZktLJFsEXtBdE&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"
     ></script>
-    <script src="assets/js/maps.js"></script>
   </body>
 </html>
