--- a/github.html
+++ b/github.html
@@ -6,31 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
       type="text/css"
     />
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       type="text/css"
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
       type="text/css"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="assets/css/github-styles.css"
+      type="text/css"
+    />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script
       type="text/javascript"
-      src="/assets/js/github-information.js"
+      src="assets/js/github-information.js"
     ></script>
     <title>Rosie</title>
   </head>
+
   <body>
     <header>
       <div class="row no-gutters">
-        <a class="col-md-4 logo" href="02-index.html"></a>
+        <a href="index.html" class="col-md-4 logo"> </a>
         <div class="col-md-8">
           <div class="row no-gutters bg-color-name-title">
             <div class="col heading">
@@ -40,38 +47,50 @@
           </div>
           <div class="row no-gutters">
             <div class="col">
-              <ul id="nav" class="list-inline menucontainer row">
-                <li class="col-xs-6 col-sm-2 ui-menu-color-home menuitem">
+              <ul id="nav" class="list-inline menucontainer">
+                <li
+                  class="col-6 col-sm-2 ui-menu-color-home list-inline-item menuitem"
+                >
                   <a href="index.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-home" aria-hidden="true"></i
                     ><span>Home</span></a
                   >
                 </li>
-                <li class="col-xs-6 col-sm-2 ui-menu-color-resume menuitem">
+                <li
+                  class="col-6 col-sm-2 ui-menu-color-resume list-inline-item menuitem"
+                >
                   <a href="resume.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-graduation-cap" aria-hidden="true"></i
                     ><span>Resume</span></a
                   >
                 </li>
-                <li class="col-xs-6 col-sm-2 ui-menu-color-contact menuitem">
+                <li
+                  class="col-6 col-sm-2 ui-menu-color-contact list-inline-item menuitem"
+                >
                   <a href="contact.html" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-commenting-o" aria-hidden="true"></i
+                    ><i class="fa fa-comment-o" aria-hidden="true"></i
                     ><span>Contact</span></a
                   >
                 </li>
-                <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem">
+                <li
+                  class="col-6 col-sm-2 ui-menu-color-interests list-inline-item menuitem"
+                >
                   <a href="interests.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-users" aria-hidden="true"></i
                     ><span>Interests</span></a
                   >
                 </li>
-                <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
+                <li
+                  class="col-6 col-sm-2 ui-menu-color-github list-inline-item menuitem"
+                >
                   <a href="github.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-github" aria-hidden="true"></i
                     ><span>GitHub</span></a
                   >
                 </li>
-                <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
+                <li
+                  class="col-6 col-sm-2 ui-menu-color-download list-inline-item menuitem"
+                >
                   <a
                     href="assets/cv/sample-cv.pdf"
                     target="_blank"
